jump when change miniature corrected

--- a/public/css/product-detail.css
+++ b/public/css/product-detail.css
@@ -39,7 +39,7 @@
   width: 60%;
   height: 20%;
   flex-wrap: wrap;
-  background-color: aqua;
+  background-color: white;
   margin-top: 15%;
 }
 .miniature .detail {
