--- a/src/sass/detail-product.scss
+++ b/src/sass/detail-product.scss
@@ -37,7 +37,7 @@
     width: 60%;
     height: 20%;
     flex-wrap: wrap;
-    background-color: aqua;
+    background-color:white;
     margin-top: 15%;
       .detail{
         width: 15%;
